Update PI - Login.html

--- a/PI - Web/PI - Login.html
+++ b/PI - Web/PI - Login.html
@@ -31,7 +31,7 @@
             <form>
                 <label for="email">E-mail:</label>
                 <input type="email" id="email" placeholder="exemplo@gmail.com">
-                <small id="hint-email" class="hint msg" aria-live="polite"></small> 
+                <small id="hint-email" class="hint"></small> 
 
                 <label for="senha">Senha:</label>
                 <input type="password" id="senha" minlength="6" required>
@@ -92,3 +92,4 @@
     <script src="../JS/script.js"></script>
 </body>
 </html>
+
