--- a/PI - Web/PI - Serviços/PI - Serviços.html
+++ b/PI - Web/PI - Serviços/PI - Serviços.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ConnectPro - Serviços</title>
-    <link rel="stylesheet" href="../CSS/style_serviços.css">
+    <link rel="stylesheet" href="../CSS/estilos.css">
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
 </head>
-<body>
+
+<body class="menu-serviços">
+</body>
+</html>
     <div class="navbar">
         <div class="navbar-logo">
             <img src="../IMG/logo.png" alt="Logo do ConnectPro" class="tamanho-logo">
@@ -21,18 +25,110 @@
         <div class="navbar-icones">
             <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span>
             <span><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></span>
-            <span><a href="../PI - Login/PI - Login.html"><img src="../IMG/login3.png" alt="Login" class="tamanho-icones"></a></span>
+            <span><a href="../PI - Login/PI - Login.html"><img src="../IMG/login3.png" alt="Login"
+                        class="tamanho-icones"></a></span>
         </div>
     </div>
 
+    <main>
+        <h2 class="meio-titulo-serviços">Todos os Serviços</h2>
+        <div class="container">
+            <div class="menu-lateral">
+                <input type="text" id="busca-categorias" placeholder="Buscar categoria..." class="busca-de-serviços">
+                <div id="sugestoes-categoria" style="position:relative; z-index:10;"></div>
+                <ul id="lista-categorias">
+                    <li onclick="mostrarCategoria('programacao')">Programação</li>
+                    <li onclick="mostrarCategoria('jardinagem')">Jardinagem</li>
+                    <li onclick="mostrarCategoria('marcenaria')">Marcenaria</li>
+                    <li onclick="mostrarCategoria('design grafico')">Design Gráfico</li>
+                    <li onclick="mostrarCategoria('traducao')">Tradução</li>
+                </ul>
+            </div>
+
+            <div class="conteudo">
+                <div class="categoria active">
+                    <div class="retangulo">
+                        <h2>Mais Visitados</h2>
+                    </div>
+                    <div class="grid">
+                    </div>
+                </div>
+
+                <div id="programacao" class="categoria">
+                    <div class="retangulo">
+                        <h2>Programação</h2>
+                    </div>
+                    <div class="grid">
+                        <div class="card">
+                            <a href="PI - Pagina molde.html?id=programacao-1">
+                                <img src="https://picsum.photos/seed/programacao-1/400/300"
+                                    alt="Desenvolvimento Web - Básico">
+                                <h3 class="card-title">Desenvolvimento Web - Básico</h3>
+                            </a>
+                            <div class="card-sub">A partir de R$ 150</div>
+                        </div>
+
+                        <div class="card">
+                            <a href="PI - Pagina molde.html?id=programacao-2">
+                                <img src="https://picsum.photos/seed/programacao-2/400/300"
+                                    alt="Desenvolvimento Web - Avançado">
+                                <h3 class="card-title">Desenvolvimento Web - Avançado</h3>
+                            </a>
+                            <div class="card-sub">A partir de R$ 450</div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div id="jardinagem" class="categoria">
+                    <div class="retangulo">
+                        <h2>Jardinagem</h2>
+                    </div>
+                    <div class="grid">
+                    </div>
+                </div>
+
+                <div id="marcenaria" class="categoria">
+                    <div class="retangulo">
+                        <h2>Marcenaria</h2>
+                    </div>
+                    <div class="grid">
+                    </div>
+                </div>
+
+                <div id="design grafico" class="categoria">
+                    <div class="retangulo">
+                        <h2>Design Gráfico</h2>
+                    </div>
+                    <div class="grid">
+                    </div>
+                </div>
+
+                <div id="traducao" class="categoria">
+                    <div class="retangulo">
+                        <h2>Tradução</h2>
+                    </div>
+                    <div class="grid">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </main>
+
+    <br>
+
     <footer>
-        <div style="padding-left: 50px;">
+        <div style="padding-left: 20px; padding-right: 20px;">
             <img src="../IMG/logoalt.png" alt="Logo Alternativo"><br><br>
             <div class="social-logos">
-                <a href="https://www.instagram.com/" target="_blank"><img src="../IMG/instagram.png" alt="Logo Instagram"></a>
-                <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><img src="../IMG/facebook.png" alt="Logo Facebook"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../IMG/instagram.png"
+                        alt="Logo Instagram"></a>
+                <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><img src="../IMG/facebook.png"
+                        alt="Logo Facebook"></a>
                 <a href="https://x.com/?lang=pt" target="_blank"><img src="../IMG/twitter.png" alt="Logo Twitter"></a>
-                <a href="https://br.linkedin.com/" target="_blank"><img src="../IMG/linkedin.png" alt="Logo LinkedIn"></a>
+                <a href="https://br.linkedin.com/" target="_blank"><img src="../IMG/linkedin.png"
+                        alt="Logo LinkedIn"></a>
             </div>
         </div>
         <div class="foot-menu">
@@ -69,5 +165,7 @@
             </span>
         </div>
     </footer>
+    <script src="../JS/script.js"></script>
 </body>
+
 </html>
