Update PI - Página Molde.html

--- a/PI - Web/PI - Serviços/PI - Página Molde.html
+++ b/PI - Web/PI - Serviços/PI - Página Molde.html
@@ -15,7 +15,7 @@
       <img src="../IMG/logo.png" alt="Logo do ConnectPro" class="tamanho-logo">
     </div>
     <div class="navbar-menu">
-      <span class="fonte-head"><b>Início</b></span>
+      <span><a href="../PI - Página Inicial/PI - Pagina Inicial.html">Início</a></span>
       <span><a href="../PI - Serviços/PI - Serviços.html">Serviços</a></span>
       <span><a href="../PI - Sobre/PI - Sobre.html">Sobre</a></span>
       <span><a href="../PI - Ajuda/PI - Ajuda.html">Ajuda</a></span>
