--- a/PI - Web/PI - Serviços/PI - Serviços.html
+++ b/PI - Web/PI - Serviços/PI - Serviços.html
@@ -11,161 +11,190 @@
 
 <body class="menu-serviços">
 </body>
+
 </html>
-    <div class="navbar">
-        <div class="navbar-logo">
-            <img src="../IMG/logo.png" alt="Logo do ConnectPro" class="tamanho-logo">
+<div class="navbar">
+    <div class="navbar-logo">
+        <img src="../IMG/logo.png" alt="Logo do ConnectPro" class="tamanho-logo">
+    </div>
+    <div class="navbar-menu">
+        <span><a href="../PI - Página Inicial/PI - Pagina Inicial.html">Início</a></span>
+        <span class="fonte-head"><b>Serviços</b></span>
+        <span><a href="../PI - Sobre/PI - Sobre.html">Sobre</a></span>
+        <span><a href="../PI - Ajuda/PI - Ajuda.html">Ajuda</a></span>
+    </div>
+    <div class="navbar-icones">
+        <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span>
+        <span><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></span>
+        <span><a href="../PI - Login/PI - Login.html"><img src="../IMG/login3.png" alt="Login"
+                    class="tamanho-icones"></a></span>
+    </div>
+</div>
+
+<main>
+    <h2 class="meio-titulo-serviços">Todos os Serviços</h2>
+    <div class="container">
+        <div class="menu-lateral">
+            <input type="text" id="busca-categorias" placeholder="Buscar categoria..." class="busca-de-serviços">
+            <div id="sugestoes-categoria" style="position:relative; z-index:10;"></div>
+            <ul id="lista-categorias">
+                <li onclick="mostrarCategoria('programacao')">Programação</li>
+                <li onclick="mostrarCategoria('jardinagem')">Jardinagem</li>
+                <li onclick="mostrarCategoria('marcenaria')">Marcenaria</li>
+                <li onclick="mostrarCategoria('design grafico')">Design Gráfico</li>
+                <li onclick="mostrarCategoria('traducao')">Tradução</li>
+            </ul>
         </div>
-        <div class="navbar-menu">
-            <span><a href="../PI - Página Inicial/PI - Pagina Inicial.html">Início</a></span>
-            <span class="fonte-head"><b>Serviços</b></span>
-            <span><a href="../PI - Sobre/PI - Sobre.html">Sobre</a></span>
-            <span><a href="../PI - Ajuda/PI - Ajuda.html">Ajuda</a></span>
-        </div>
-        <div class="navbar-icones">
-            <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span>
-            <span><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></span>
-            <span><a href="../PI - Login/PI - Login.html"><img src="../IMG/login3.png" alt="Login"
-                        class="tamanho-icones"></a></span>
+
+        <div class="conteudo">
+            <div class="categoria active">
+                <div class="retangulo">
+                    <h2>Mais Visitados</h2>
+                </div>
+                <div class="grid">
+                </div>
+            </div>
+
+            <div id="programacao" class="categoria">
+                <div class="retangulo">
+                    <h2>Programação</h2>
+                </div>
+                <div class="grid">
+                    <div class="card">
+                        <a href="PI - Pagina molde.html?id=programacao-1">
+                            <img src="../IMG/programa-1.png" alt="Desenvolvimento Web - Básico" width="400"
+                                height="300">
+                            <h3 class="card-title">Desenvolvimento Web - Básico</h3>
+                        </a>
+                        <div class="card-sub">A partir de R$ 150</div>
+                    </div>
+
+                    <div class="card">
+                        <a href="PI - Pagina molde.html?id=programacao-2">
+                            <img src="../IMG/programa-2.jpg" alt="Desenvolvimento Web - Avançado" width="400"
+                                height="300">
+                            <h3 class="card-title">Desenvolvimento Web - Avançado</h3>
+                        </a>
+                        <div class="card-sub">A partir de R$ 450</div>
+                    </div>
+
+                    <div class="card">
+                        <a href="PI - Pagina molde.html?id=programacao-3">
+                            <img src="../IMG/../IMG/banco de dados 1.jpg" alt="Criação de Banco de Dados" width="400"
+                                height="300">
+                            <h3 class="card-title">Criação de Banco de Dados</h3>
+                        </a>
+                        <div class="card-sub">A partir de R$ 550</div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="jardinagem" class="categoria">
+                <div class="retangulo">
+                    <h2>Jardinagem</h2>
+                </div>
+                <div class="grid">
+                    <div class="card">
+                        <a href="PI - Pagina molde.html?id=jardinagem-1">
+                            <img src="../IMG/jardinagem 1.webp" alt="Jardinagem e paisagismo" width="400" height="300">
+                            <h3 class="card-title">Jardinagem e paisagismo</h3>
+                        </a>
+                        <div class="card-sub">A partir de R$ 200</div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="marcenaria" class="categoria">
+                <div class="retangulo">
+                    <h2>Marcenaria</h2>
+                </div>
+                <div class="grid">
+                    <div class="card">
+                        <a href="PI - Pagina molde.html?id=marcenaria-1">
+                            <img src="../IMG/marcenaria 1.png" alt="Ajuste de móveis" width="400" height="300">
+                            <h3 class="card-title">Ajuste de móveis</h3>
+                        </a>
+                        <div class="card-sub">A partir de R$ 200</div>
+                    </div>
+                </div>
+            </div>
+            <div id="design grafico" class="categoria">
+                <div class="retangulo">
+                    <h2>Design Gráfico</h2>
+                </div>
+                <div class="grid">
+                    <div class="card">
+                        <a href="PI - Pagina molde.html?id=design-grafico-1">
+                            <img src="../IMG/Design Grafico 1.jpg" alt="Design Gráfico - Criação de logo" width="400"
+                                height="300">
+                            <h3 class="card-title">Design Gráfico - Criação de logo</h3>
+                        </a>
+                        <div class="card-sub">A partir de R$ 120</div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="traducao" class="categoria">
+                <div class="retangulo">
+                    <h2>Tradução</h2>
+                </div>
+                <div class="grid">
+                </div>
+            </div>
+
         </div>
     </div>
+</main>
 
-    <main>
-        <h2 class="meio-titulo-serviços">Todos os Serviços</h2>
-        <div class="container">
-            <div class="menu-lateral">
-                <input type="text" id="busca-categorias" placeholder="Buscar categoria..." class="busca-de-serviços">
-                <div id="sugestoes-categoria" style="position:relative; z-index:10;"></div>
-                <ul id="lista-categorias">
-                    <li onclick="mostrarCategoria('programacao')">Programação</li>
-                    <li onclick="mostrarCategoria('jardinagem')">Jardinagem</li>
-                    <li onclick="mostrarCategoria('marcenaria')">Marcenaria</li>
-                    <li onclick="mostrarCategoria('design grafico')">Design Gráfico</li>
-                    <li onclick="mostrarCategoria('traducao')">Tradução</li>
-                </ul>
-            </div>
+<br>
 
-            <div class="conteudo">
-                <div class="categoria active">
-                    <div class="retangulo">
-                        <h2>Mais Visitados</h2>
-                    </div>
-                    <div class="grid">
-                    </div>
-                </div>
-
-                <div id="programacao" class="categoria">
-                    <div class="retangulo">
-                        <h2>Programação</h2>
-                    </div>
-                    <div class="grid">
-                        <div class="card">
-                            <a href="PI - Pagina molde.html?id=programacao-1">
-                                <img src="https://picsum.photos/seed/programacao-1/400/300"
-                                    alt="Desenvolvimento Web - Básico">
-                                <h3 class="card-title">Desenvolvimento Web - Básico</h3>
-                            </a>
-                            <div class="card-sub">A partir de R$ 150</div>
-                        </div>
-
-                        <div class="card">
-                            <a href="PI - Pagina molde.html?id=programacao-2">
-                                <img src="https://picsum.photos/seed/programacao-2/400/300"
-                                    alt="Desenvolvimento Web - Avançado">
-                                <h3 class="card-title">Desenvolvimento Web - Avançado</h3>
-                            </a>
-                            <div class="card-sub">A partir de R$ 450</div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div id="jardinagem" class="categoria">
-                    <div class="retangulo">
-                        <h2>Jardinagem</h2>
-                    </div>
-                    <div class="grid">
-                    </div>
-                </div>
-
-                <div id="marcenaria" class="categoria">
-                    <div class="retangulo">
-                        <h2>Marcenaria</h2>
-                    </div>
-                    <div class="grid">
-                    </div>
-                </div>
-
-                <div id="design grafico" class="categoria">
-                    <div class="retangulo">
-                        <h2>Design Gráfico</h2>
-                    </div>
-                    <div class="grid">
-                    </div>
-                </div>
-
-                <div id="traducao" class="categoria">
-                    <div class="retangulo">
-                        <h2>Tradução</h2>
-                    </div>
-                    <div class="grid">
-                    </div>
-                </div>
-
-            </div>
+<footer>
+    <div style="padding-left: 20px; padding-right: 20px;">
+        <img src="../IMG/logoalt.png" alt="Logo Alternativo"><br><br>
+        <div class="social-logos">
+            <a href="https://www.instagram.com/" target="_blank"><img src="../IMG/instagram.png"
+                    alt="Logo Instagram"></a>
+            <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><img src="../IMG/facebook.png"
+                    alt="Logo Facebook"></a>
+            <a href="https://x.com/?lang=pt" target="_blank"><img src="../IMG/twitter.png" alt="Logo Twitter"></a>
+            <a href="https://br.linkedin.com/" target="_blank"><img src="../IMG/linkedin.png" alt="Logo LinkedIn"></a>
         </div>
-    </main>
+    </div>
+    <div class="foot-menu">
+        <span>
+            <b>Minha Conta</b><br>
+            <br>
+            Entrar<br>
+            Cadastrar-se<br>
+            Status<br>
+        </span>
 
-    <br>
+        <span>
+            <b>Ajuda</b><br>
+            <br>
+            Serviço<br>
+            Qualidade<br>
+            Dúvidas<br>
+        </span>
 
-    <footer>
-        <div style="padding-left: 20px; padding-right: 20px;">
-            <img src="../IMG/logoalt.png" alt="Logo Alternativo"><br><br>
-            <div class="social-logos">
-                <a href="https://www.instagram.com/" target="_blank"><img src="../IMG/instagram.png"
-                        alt="Logo Instagram"></a>
-                <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><img src="../IMG/facebook.png"
-                        alt="Logo Facebook"></a>
-                <a href="https://x.com/?lang=pt" target="_blank"><img src="../IMG/twitter.png" alt="Logo Twitter"></a>
-                <a href="https://br.linkedin.com/" target="_blank"><img src="../IMG/linkedin.png"
-                        alt="Logo LinkedIn"></a>
-            </div>
-        </div>
-        <div class="foot-menu">
-            <span>
-                <b>Minha Conta</b><br>
-                <br>
-                Entrar<br>
-                Cadastrar-se<br>
-                Status<br>
-            </span>
+        <span>
+            <b>Anúncios</b><br>
+            <br>
+            Todos os Serviços<br>
+            Programação<br>
+            Edição de Vídeo<br>
+        </span>
 
-            <span>
-                <b>Ajuda</b><br>
-                <br>
-                Serviço<br>
-                Qualidade<br>
-                Dúvidas<br>
-            </span>
-
-            <span>
-                <b>Anúncios</b><br>
-                <br>
-                Todos os Serviços<br>
-                Programação<br>
-                Edição de Vídeo<br>
-            </span>
-
-            <span>
-                <b>Legalidades</b><br>
-                <br>
-                Qualidade do Serviço<br>
-                Termos e Condições<br>
-                Privacidade e Política<br>
-            </span>
-        </div>
-    </footer>
-    <script src="../JS/script.js"></script>
+        <span>
+            <b>Legalidades</b><br>
+            <br>
+            Qualidade do Serviço<br>
+            Termos e Condições<br>
+            Privacidade e Política<br>
+        </span>
+    </div>
+</footer>
+<script src="../JS/script.js"></script>
 </body>
 
 </html>
