Coloca os links no footers, os que existem eu coloquei os links mas os que nao existe eu deixei vazio, quando existir adicione

--- a/PI - Web/PI - Sobre/PI - Sobre.html
+++ b/PI - Web/PI - Sobre/PI - Sobre.html
@@ -52,33 +52,33 @@
             <span>
                 <b>Minha Conta</b><br>
                 <br>
-                Entrar<br>
-                Cadastrar-se<br>
-                Status<br>
+                <a href="../PI - Login/PI - Login.html">Entrar</a><br>
+                <a href="../PI - Login/PI - Cadastro.html">Cadastrar-se</a><br>
+                <a href="#">Status</a> <!-- adicionar link --><br>
             </span>
 
             <span>
                 <b>Ajuda</b><br>
                 <br>
-                Serviço<br>
-                Qualidade<br>
-                Dúvidas<br>
+                <a href="#">Serviço</a> <!-- adicionar link --><br>
+                <a href="#">Qualidade</a> <!-- adicionar link --><br>
+                <a href="#">Dúvidas</a> <!-- adicionar link --><br>
             </span>
 
             <span>
                 <b>Anúncios</b><br>
                 <br>
-                Todos os Serviços<br>
-                Programação<br>
-                Edição de Vídeo<br>
+                <a href="#">Todos os Serviços</a> <!-- adicionar link --><br>
+                <a href="#">Programação</a> <!-- adicionar link --><br>
+                <a href="#">Edição de Vídeo</a> <!-- adicionar link --><br>
             </span>
 
             <span>
                 <b>Legalidades</b><br>
                 <br>
-                Qualidade do Serviço<br>
-                Termos e Condições<br>
-                Privacidade e Política<br>
+                <a href="#">Qualidade do Serviço</a> <!-- adicionar link --><br>
+                <a href="#">Termos e Condições</a> <!-- adicionar link --><br>
+                <a href="#">Privacidade e Política</a> <!-- adicionar link --><br>
             </span>
         </div>
     </footer>
