Refiz o botão da pagina inicial e coloquei a imagem da pagina inicial, coloquei algumas modificações pra deixar o texto legivel mesmo com a imagem

--- a/PI - Web/PI - Página Inicial/PI - Pagina Inicial.html
+++ b/PI - Web/PI - Página Inicial/PI - Pagina Inicial.html
@@ -35,7 +35,7 @@
             <div class="conteudo-vitrine">
                 <p>Explore diferentes categorias. Ache o melhor serviço</p>
                 <div class="botao-vitrine">
-                    <a href="../PI - Serviços/PI - Serviços.html"><img src="../IMG/explore.png" alt="Explore Mais"></a>
+                    <a href="../PI - Serviços/PI - Serviços.html">Explore Agora</a>   <!-- mudei o botão pra ser baseado em css invez de imagem -->
                 </div>
             </div>
         </div>
