Adiciona animação de fade-in na imagem de fundo e melhora a visibilidade do texto na página inicial, tem muitas mudanças experimentais e talvez codigo inutil que eu deixei enquanto eu estava testando oque funciona

--- a/PI - Web/PI - Página Inicial/PI - Pagina Inicial.html
+++ b/PI - Web/PI - Página Inicial/PI - Pagina Inicial.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ConnectPro - Início</title>
+    <link rel="preload" href="../IMG/inicial/fotocapainicial.jpg" as="image">  <!-- Preload pq estava demorando pra carregar -->
     <link rel="stylesheet" href="../CSS/estilos.css">
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
@@ -28,6 +29,7 @@
 
     <main class="content">
         <div class="fundo-vitrine">
+            <img class="bg-vitrine" src="../IMG/inicial/fotocapainicial.jpg" alt="" aria-hidden="true">
             <div class="tamanho-vitrine">
                 <h1>A Maior Vitrine de <br> Serviços da Internet</h1>
             </div>
