--- a/PI - Web/PI - Serviços/PI - Serviços.html
+++ b/PI - Web/PI - Serviços/PI - Serviços.html
@@ -35,6 +35,7 @@
     <h2 class="meio-titulo-serviços">Todos os Serviços</h2>
     <div class="container">
         <div class="menu-lateral">
+            <button type="button" class="link-mais-visitados" onclick="mostrarCategoria('mais-visitados')">← Mais Visitados</button>
             <input type="text" id="busca-categorias" placeholder="Buscar categoria..." class="busca-de-serviços">
             <div id="sugestoes-categoria" style="position:relative; z-index:10;"></div>
             <ul id="lista-categorias">
@@ -47,11 +48,53 @@
         </div>
 
         <div class="conteudo">
-            <div class="categoria active">
+            <div id="mais-visitados" class="categoria active">
                 <div class="retangulo">
                     <h2>Mais Visitados</h2>
                 </div>
                 <div class="grid">
+                    <div class="card">
+                        <a href="PI - Pagina molde.html?id=programacao-2">
+                            <img src="../IMG/programa-2.jpg" alt="Desenvolvimento Web - Avançado" width="400" height="300">
+                            <h3 class="card-title">Desenvolvimento Web - Avançado</h3>
+                        </a>
+                        <div class="card-sub">A partir de R$ 450</div>
+                    </div>
+                    <div class="card">
+                        <a href="PI - Pagina molde.html?id=jardinagem-1">
+                            <img src="../IMG/jardinagem 1.webp" alt="Jardinagem e paisagismo" width="400" height="300">
+                            <h3 class="card-title">Jardinagem e paisagismo</h3>
+                        </a>
+                        <div class="card-sub">A partir de R$ 200</div>
+                    </div>
+                    <div class="card">
+                        <a href="PI - Pagina molde.html?id=marcenaria-1">
+                            <img src="../IMG/marcenaria 1.png" alt="Ajuste de móveis" width="400" height="300">
+                            <h3 class="card-title">Ajuste de móveis</h3>
+                        </a>
+                        <div class="card-sub">A partir de R$ 200</div>
+                    </div>
+                    <div class="card">
+                        <a href="PI - Pagina molde.html?id=design-grafico-1">
+                            <img src="../IMG/Design Grafico 1.jpg" alt="Design Gráfico - Criação de logo" width="400" height="300">
+                            <h3 class="card-title">Design Gráfico - Criação de logo</h3>
+                        </a>
+                        <div class="card-sub">A partir de R$ 120</div>
+                    </div>
+                    <div class="card">
+                        <a href="PI - Pagina molde.html?id=programacao-1">
+                            <img src="../IMG/programa-1.png" alt="Desenvolvimento Web - Básico" width="400" height="300">
+                            <h3 class="card-title">Desenvolvimento Web - Básico</h3>
+                        </a>
+                        <div class="card-sub">A partir de R$ 150</div>
+                    </div>
+                    <div class="card">
+                        <a href="PI - Pagina molde.html?id=programacao-3">
+                            <img src="../IMG/../IMG/banco de dados 1.jpg" alt="Criação de Banco de Dados" width="400" height="300">
+                            <h3 class="card-title">Criação de Banco de Dados</h3>
+                        </a>
+                        <div class="card-sub">A partir de R$ 550</div>
+                    </div>
                 </div>
             </div>
 
