Atualiza estilos e textos dos botões

--- a/PI - Web/PI - Serviços/PI - Serviços.html
+++ b/PI - Web/PI - Serviços/PI - Serviços.html
@@ -35,7 +35,7 @@
     <h2 class="meio-titulo-serviços">Todos os Serviços</h2>
     <div class="container">
         <div class="menu-lateral">
-            <button type="button" class="link-mais-visitados" onclick="mostrarCategoria('mais-visitados')">← Mais Visitados</button>
+            <button type="button" class="link-mais-visitados" onclick="mostrarCategoria('mais-visitados')">Mais Visitados</button>
             <input type="text" id="busca-categorias" placeholder="Buscar categoria..." class="busca-de-serviços">
             <div id="sugestoes-categoria" style="position:relative; z-index:10;"></div>
             <ul id="lista-categorias">
