Criado a pagina de meus pedidos (ara depois linkar com os pedidos consluidos do carrinho)

--- a/PI - Web/PI - Serviços/PI - Pagina Molde.html
+++ b/PI - Web/PI - Serviços/PI - Pagina Molde.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Detalhe do Serviço</title>
+  <title>Detalhes do Serviço</title>
   <link rel="stylesheet" href="../CSS/estilos.css">
 
 </head>
