--- a/PI - Web/PI - Serviços/PI - Serviços.html
+++ b/PI - Web/PI - Serviços/PI - Serviços.html
@@ -22,6 +22,7 @@
         <span class="fonte-head"><b>Serviços</b></span>
         <span><a href="../PI - Sobre/PI - Sobre.html">Sobre</a></span>
         <span><a href="../PI - Ajuda/PI - Ajuda.html">Ajuda</a></span>
+        <span><a href="../PI - Serviços/PI - Meus Serviços Contratados.html">Serviços Contratados</a></span>
     </div>
     <div class="navbar-icones">
         <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span>
