--- a/PI - Web/PI - Login/PI - Login.html
+++ b/PI - Web/PI - Login/PI - Login.html
@@ -19,8 +19,8 @@
             <span><a href="../PI - Ajuda/PI - Ajuda.html">Ajuda</a></span>
         </div>
         <div class="navbar-icones">
-            <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span>
-            <span><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></span>
+            <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span> <!-- icone procurar-->
+            <span><a href="../PI - Carrinho/PI - Carrinho.html"><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></a></span>
             <span><a href="PI - Login.html"><img src="../IMG/login3.png" alt="Login" class="tamanho-icones"></a></span>
         </div>
     </div>
