--- a/PI - Web/PI - Página Inicial/PI - Pagina Inicial.html
+++ b/PI - Web/PI - Página Inicial/PI - Pagina Inicial.html
@@ -21,7 +21,7 @@
             <span><a href="../PI - Ajuda/PI - Ajuda.html">Ajuda</a></span>
         </div>
         <div class="navbar-icones">
-            <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span>
+            <span><a href="#"><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></a></span>
             <span><a href="../PI - Carrinho/PI - Carrinho.html"><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></a></span>
             <span><a href="../PI - Login/PI - Login.html"><img src="../IMG/login3.png" alt="Login" class="tamanho-icones"></a></span>
         </div>
