--- a/PI - Web/PI - Login/PI - Cadastro.html
+++ b/PI - Web/PI - Login/PI - Cadastro.html
@@ -20,8 +20,8 @@
         </div>
         <div class="navbar-icones">
             <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span>
-            <span><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></span>
-            <span><a href="PI - Login.html"><img src="../IMG/login3.png" alt="Login" class="tamanho-icones"></a></span>
+            <span><a href="../PI - Carrinho/PI - Carrinho.html"><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></a></span>
+            <span><a href="PI - Login.html"><img src="../IMG/login3.png" alt="Login" class="tamanho-icones icone-ativo"></a></span>
         </div>
     </div>
 
