--- a/PI - Web/PI - Serviços/PI - Pagina Molde.html
+++ b/PI - Web/PI - Serviços/PI - Pagina Molde.html
@@ -22,7 +22,7 @@
     </div>
     <div class="navbar-icones">
       <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span>
-      <span><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></span>
+      <span><a href="../PI - Carrinho/PI - Carrinho.html"><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></a></span>
       <span><a href="../PI - Login/PI - Login.html"><img src="../IMG/login3.png" alt="Login"
             class="tamanho-icones"></a></span>
     </div>
@@ -46,7 +46,10 @@
         </div>
         <p id="resultado-avaliacao"></p>
       </section>
-      <button id="btn-contato">Contatar</button>
+      <div style="grid-area: buttons;">
+        <button id="btn-adicionar-carrinho" onclick="adicionarAoCarrinho()">Adicionar ao Carrinho</button>
+        <button id="btn-contato">Contatar</button>
+      </div>
     </main>
   </div>
   <script src="../JS/script.js"></script>
