--- a/PI - Web/PI - Serviços/PI - Meus Serviços Contratados.html
+++ b/PI - Web/PI - Serviços/PI - Meus Serviços Contratados.html
@@ -11,38 +11,38 @@
 <body class="bg-molde">
   
   <header class="navbar">
-    <div class="navbar-logo">
+    <figure class="navbar-logo">
       <img src="../IMG/logo.png" alt="Logo do ConnectPro" class="tamanho-logo">
-    </div>
-    <div class="navbar-menu">
+    </figure>
+    <nav class="navbar-menu">
       <span><a href="../PI - Página Inicial/PI - Pagina Inicial.html">Início</a></span>
       <span><a href="../PI - Serviços/PI - Serviços.html">Serviços</a></span>
       <span><a href="../PI - Sobre/PI - Sobre.html">Sobre</a></span>
       <span><a href="../PI - Ajuda/PI - Ajuda.html">Ajuda</a></span>
-    </div>
-    <div class="navbar-icones">
+    </nav>
+    <nav class="navbar-icones">
       <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span>
       <span><a href="../PI - Carrinho/PI - Carrinho.html"><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></a></span>
       <span><a href="../PI - Login/PI - Login.html"><img src="../IMG/login3.png" alt="Login" class="tamanho-icones"></a></span>
-    </div>
+    </nav>
   </header>
 
   <main class="pedidos-container">
     <h1 class="meio-titulo-serviços">Meus Serviços Contratados</h1>
 
-    <div id="lista-pedidos">
-        </div>
+    <section id="lista-pedidos">
+        </section>
 
   </main>
 
   <footer>
-    <div style="padding-left: 50px;">
+    <section style="padding-left: 50px;">
         <img src="../IMG/logoalt.png" alt="Logo Alternativo"><br><br>
-        <div class="social-logos">
+        <nav class="social-logos">
             <a href="https://www.instagram.com/" target="_blank"><img src="../IMG/instagram.png" alt="Logo Instagram"></a>
             <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><img src="../IMG/facebook.png" alt="Logo Facebook"></a>
-        </div>
-    </div>
+        </nav>
+    </section>
   </footer>
 
   <script src="../JS/script.js"></script>
