--- a/PI - Web/PI - Serviços/PI - Pagina Molde.html
+++ b/PI - Web/PI - Serviços/PI - Pagina Molde.html
@@ -11,24 +11,24 @@
 
 <body class="bg-molde">
   <header class="navbar">
-    <div class="navbar-logo">
+    <figure class="navbar-logo">
       <img src="../IMG/logo.png" alt="Logo do ConnectPro" class="tamanho-logo">
-    </div>
-    <div class="navbar-menu">
+    </figure>
+    <nav class="navbar-menu">
       <span><a href="../PI - Página Inicial/PI - Pagina Inicial.html">Início</a></span>
       <span class="fonte-head"><b>Serviços</b></span>
       <span><a href="../PI - Sobre/PI - Sobre.html">Sobre</a></span>
       <span><a href="../PI - Ajuda/PI - Ajuda.html">Ajuda</a></span>
-    </div>
-    <div class="navbar-icones">
+    </nav>
+    <nav class="navbar-icones">
       <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span>
       <span><a href="../PI - Carrinho/PI - Carrinho.html"><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></a></span>
       <span><a href="../PI - Login/PI - Login.html"><img src="../IMG/login3.png" alt="Login"
             class="tamanho-icones"></a></span>
-    </div>
+    </nav>
   </header>
-  <div class="bg-molde">
-    <div class="molde-header"></div>
+  <section class="bg-molde">
+    <header class="molde-header"></header>
   <a id="link-voltar" href="PI - Serviços.html#mais-visitados" class="voltar-link-abaixo">Mais Visitados</a>
 
     <main id="detalhe">
@@ -37,21 +37,21 @@
       <p id="preco"></p>
       <p id="descricao"></p>
       <section id="avaliacao">
-        <div class="estrelas">
+        <section class="estrelas">
           <span class="estrela" data-value="1">★</span>
           <span class="estrela" data-value="2">★</span>
           <span class="estrela" data-value="3">★</span>
           <span class="estrela" data-value="4">★</span>
           <span class="estrela" data-value="5">★</span>
-        </div>
+        </section>
         <p id="resultado-avaliacao"></p>
       </section>
-      <div style="grid-area: buttons;">
+      <nav style="grid-area: buttons;">
         <button id="btn-adicionar-carrinho" onclick="adicionarAoCarrinho()">Adicionar ao Carrinho</button>
         <button id="btn-contato">Contatar</button>
-      </div>
+      </nav>
     </main>
-  </div>
+  </section>
   <script src="../JS/script.js"></script>
 </body>
 </html>
