--- a/PI - Web/teste-carrinho.html
+++ b/PI - Web/teste-carrinho.html
@@ -35,17 +35,17 @@
 <body>
   <h1>Teste do Carrinho</h1>
   
-  <div class="info">
+  <section class="info">
     <h2>Serviço: Desenvolvimento Web - Básico</h2>
     <p>Preço: A partir de R$ 150</p>
-  </div>
+  </section>
   
   <button onclick="testarAdicionar()">Adicionar ao Carrinho</button>
   <button onclick="verCarrinho()">Ver Carrinho no Console</button>
   <button onclick="irParaCarrinho()">Ir para Página do Carrinho</button>
   <button onclick="limparCarrinho()">Limpar Carrinho</button>
   
-  <div id="resultado" style="margin-top: 20px;"></div>
+  <section id="resultado" style="margin-top: 20px;"></section>
   
   <script>
     // Função para adicionar item ao carrinho
