--- a/PI - Web/PI - Checkout/PI - Checkout.html
+++ b/PI - Web/PI - Checkout/PI - Checkout.html
@@ -8,130 +8,130 @@
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
 </head>
 <body style="background-color: #eeeeee;">
-    <div class="navbar">
-        <div class="navbar-logo">
+    <header class="navbar">
+        <figure class="navbar-logo">
             <img src="../IMG/logo.png" alt="Logo do ConnectPro" class="tamanho-logo">
-        </div>
-        <div class="navbar-menu">
+        </figure>
+        <nav class="navbar-menu">
             <span><a href="../PI - Página Inicial/PI - Pagina Inicial.html">Início</a></span>
             <span><a href="../PI - Serviços/PI - Serviços.html">Serviços</a></span>
             <span><a href="../PI - Sobre/PI - Sobre.html">Sobre</a></span>
             <span><a href="../PI - Ajuda/PI - Ajuda.html">Ajuda</a></span>
-        </div>
-        <div class="navbar-icones">
+        </nav>
+        <nav class="navbar-icones">
             <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span>
             <span><a href="../PI - Carrinho/PI - Carrinho.html"><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones icone-ativo"></a></span>
             <span><a href="../PI - Login/PI - Login.html"><img src="../IMG/login3.png" alt="Login" class="tamanho-icones"></a></span>
-        </div>
-    </div>
+        </nav>
+    </header>
 
     <main class="checkout-container">
         <h1 class="checkout-titulo">Finalizar Compra</h1>
         
-        <div class="checkout-grid">
-            <div class="checkout-form">
+        <section class="checkout-grid">
+            <form class="checkout-form">
                 <section class="checkout-secao">
                     <h2>Dados Pessoais</h2>
-                    <div class="form-grupo">
+                    <p class="form-grupo">
                         <label for="nome">Nome Completo</label>
                         <input type="text" id="nome" placeholder="Seu nome completo" required>
-                    </div>
-                    <div class="form-grupo">
+                    </p>
+                    <p class="form-grupo">
                         <label for="email">E-mail</label>
                         <input type="email" id="email" placeholder="seu@email.com" required>
-                    </div>
-                    <div class="form-grupo">
+                    </p>
+                    <p class="form-grupo">
                         <label for="telefone">Telefone</label>
                         <input type="tel" id="telefone" placeholder="(00) 00000-0000" required>
-                    </div>
+                    </p>
                 </section>
 
                 <section class="checkout-secao">
                     <h2>Endereço</h2>
-                    <div class="form-row">
-                        <div class="form-grupo" style="flex: 1;">
+                    <section class="form-row">
+                        <p class="form-grupo" style="flex: 1;">
                             <label for="cep">CEP</label>
                             <input type="text" id="cep" placeholder="00000-000" required>
-                        </div>
-                        <div class="form-grupo" style="flex: 2;">
+                        </p>
+                        <p class="form-grupo" style="flex: 2;">
                             <label for="cidade">Cidade</label>
                             <input type="text" id="cidade" placeholder="Cidade" required>
-                        </div>
-                    </div>
-                    <div class="form-grupo">
+                        </p>
+                    </section>
+                    <p class="form-grupo">
                         <label for="endereco">Endereço</label>
                         <input type="text" id="endereco" placeholder="Rua, número, bairro" required>
-                    </div>
+                    </p>
                 </section>
 
                 <section class="checkout-secao">
                     <h2>Pagamento</h2>
-                    <div class="metodos-pagamento">
-                        <div class="metodo-opcao selected" onclick="selecionarPagamento(this, 'cartao')">
+                    <fieldset class="metodos-pagamento">
+                        <button type="button" class="metodo-opcao selected" onclick="selecionarPagamento(this, 'cartao')">
                             <span>💳 Cartão de Crédito</span>
-                        </div>
-                        <div class="metodo-opcao" onclick="selecionarPagamento(this, 'pix')">
+                        </button>
+                        <button type="button" class="metodo-opcao" onclick="selecionarPagamento(this, 'pix')">
                             <span>💠 PIX</span>
-                        </div>
-                        <div class="metodo-opcao" onclick="selecionarPagamento(this, 'boleto')">
+                        </button>
+                        <button type="button" class="metodo-opcao" onclick="selecionarPagamento(this, 'boleto')">
                             <span>📄 Boleto</span>
-                        </div>
-                    </div>
+                        </button>
+                    </fieldset>
                     
-                    <div id="form-cartao" class="pagamento-detalhes">
-                        <div class="form-grupo">
+                    <section id="form-cartao" class="pagamento-detalhes">
+                        <p class="form-grupo">
                             <label>Número do Cartão</label>
                             <input type="text" placeholder="0000 0000 0000 0000">
-                        </div>
-                        <div class="form-row">
-                            <div class="form-grupo">
+                        </p>
+                        <section class="form-row">
+                            <p class="form-grupo">
                                 <label>Validade</label>
                                 <input type="text" placeholder="MM/AA">
-                            </div>
-                            <div class="form-grupo">
+                            </p>
+                            <p class="form-grupo">
                                 <label>CVV</label>
                                 <input type="text" placeholder="123">
-                            </div>
-                        </div>
-                    </div>
+                            </p>
+                        </section>
+                    </section>
                 </section>
-            </div>
+            </form>
 
-            <div class="checkout-resumo">
+            <aside class="checkout-resumo">
                 <h2>Resumo do Pedido</h2>
-                <div id="lista-itens-resumo">
+                <section id="lista-itens-resumo">
                     <!-- Itens serão inseridos via JS -->
-                </div>
-                <div class="resumo-totais">
-                    <div class="resumo-linha">
+                </section>
+                <section class="resumo-totais">
+                    <p class="resumo-linha">
                         <span>Subtotal</span>
                         <span id="resumo-subtotal">R$ 0,00</span>
-                    </div>
-                    <div class="resumo-linha">
+                    </p>
+                    <p class="resumo-linha">
                         <span>Frete</span>
                         <span>Grátis</span>
-                    </div>
-                    <div class="resumo-linha total">
+                    </p>
+                    <p class="resumo-linha total">
                         <span>Total</span>
                         <span id="resumo-total">R$ 0,00</span>
-                    </div>
-                </div>
+                    </p>
+                </section>
                 <button class="btn-confirmar" onclick="confirmarPedido()">Confirmar Pedido</button>
                 <a href="../PI - Carrinho/PI - Carrinho.html" class="btn-voltar">Voltar ao Carrinho</a>
-            </div>
-        </div>
+            </aside>
+        </section>
     </main>
 
     <footer>
-        <div style="padding-left: 20px; padding-right: 20px;">
+        <section style="padding-left: 20px; padding-right: 20px;">
             <img src="../IMG/logoalt.png" alt="Logo Alternativo"><br><br>
-            <div class="social-logos">
+            <nav class="social-logos">
                 <a href="https://www.instagram.com/" target="_blank"><img src="../IMG/instagram.png" alt="Logo Instagram"></a>
                 <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><img src="../IMG/facebook.png" alt="Logo Facebook"></a>
                 <a href="https://x.com/?lang=pt" target="_blank"><img src="../IMG/twitter.png" alt="Logo Twitter"></a>
                 <a href="https://br.linkedin.com/" target="_blank"><img src="../IMG/linkedin.png" alt="Logo LinkedIn"></a>
-            </div>
-        </div>
+            </nav>
+        </section>
     </footer>
 
     <script src="../JS/script.js"></script>
