--- a/PI - Web/PI - Login/PI - Area Logada.html
+++ b/PI - Web/PI - Login/PI - Area Logada.html
@@ -8,42 +8,42 @@
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
 </head>
 <body>
-    <div class="navbar">
-        <div class="navbar-logo">
+    <header class="navbar">
+        <figure class="navbar-logo">
             <img src="../IMG/logo.png" alt="Logo do ConnectPro" class="tamanho-logo">
-        </div>
-        <div class="navbar-menu">
+        </figure>
+        <nav class="navbar-menu">
            <span><a href="../PI - Página Inicial/PI - Pagina Inicial.html">Início</a></span>
             <span><a href="../PI - Serviços/PI - Serviços.html">Serviços</a></span>
             <span><a href="../PI - Sobre/PI - Sobre.html">Sobre</a></span>
             <span><a href="../PI - Ajuda/PI - Ajuda.html">Ajuda</a></span>
-        </div>
-        <div class="navbar-icones">
+        </nav>
+        <nav class="navbar-icones">
             <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span>
             <span><a href="../PI - Carrinho/PI - Carrinho.html"><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></a></span>
             <span><a href="PI - Login.html"><img src="../IMG/login3.png" alt="Login" class="tamanho-icones icone-ativo"></a></span>
-        </div>
-    </div>
+        </nav>
+    </header>
 
-    <div id="painel" class="signin-bg">
-        <div class="signin-card">
+    <main id="painel" class="signin-bg">
+        <section class="signin-card">
             <h3>Bem-vindo, <span id="usuario"></span></h3>
             <button onclick="sair()" type="button">Sair</button>
             <button onclick="deletarConta()" type="button">Deletar Conta</button>
-        </div>
-    </div>
+        </section>
+    </main>
 
     <footer>
-        <div style="padding-left: 50px;">
+        <section style="padding-left: 50px;">
             <img src="../IMG/logoalt.png" alt="Logo Alternativo"><br><br>
-            <div class="social-logos">
+            <nav class="social-logos">
                 <a href="https://www.instagram.com/" target="_blank"><img src="../IMG/instagram.png" alt="Logo Instagram"></a>
                 <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><img src="../IMG/facebook.png" alt="Logo Facebook"></a>
                 <a href="https://x.com/?lang=pt" target="_blank"><img src="../IMG/twitter.png" alt="Logo Twitter"></a>
                 <a href="https://br.linkedin.com/" target="_blank"><img src="../IMG/linkedin.png" alt="Logo LinkedIn"></a>
-            </div>
-        </div>
-        <div class="foot-menu">
+            </nav>
+        </section>
+        <nav class="foot-menu">
             <span>
                 <b>Minha Conta</b><br>
                 <br>
@@ -75,7 +75,7 @@
                 <a href="#">Termos e Condições</a> <!-- adicionar link --><br>
                 <a href="#">Privacidade e Política</a> <!-- adicionar link --><br>
             </span>
-        </div>
+        </nav>
     </footer>
     <script src="../JS/script.js"></script>
 </body>
