--- a/PI - Web/PI - Login/PI - Login.html
+++ b/PI - Web/PI - Login/PI - Login.html
@@ -8,25 +8,25 @@
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
 </head>
 <body>
-    <div class="navbar">
-        <div class="navbar-logo">
+    <header class="navbar">
+        <figure class="navbar-logo">
             <img src="../IMG/logo.png" alt="Logo do ConnectPro" class="tamanho-logo">
-        </div>
-        <div class="navbar-menu">
+        </figure>
+        <nav class="navbar-menu">
             <span><a href="../PI - Página Inicial/PI - Pagina Inicial.html">Início</a></span>
             <span><a href="../PI - Serviços/PI - Serviços.html">Serviços</a></span>
             <span><a href="../PI - Sobre/PI - Sobre.html">Sobre</a></span>
             <span><a href="../PI - Ajuda/PI - Ajuda.html">Ajuda</a></span>
-        </div>
-        <div class="navbar-icones">
+        </nav>
+        <nav class="navbar-icones">
             <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span> <!-- icone procurar-->
             <span><a href="../PI - Carrinho/PI - Carrinho.html"><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></a></span>
             <span><a href="PI - Login.html"><img src="../IMG/login3.png" alt="Login" class="tamanho-icones icone-ativo"></a></span>
-        </div>
-    </div>
+        </nav>
+    </header>
 
-    <div class="login-bg">
-        <div class="login-card">
+    <main class="login-bg">
+        <section class="login-card">
             <h2>Entrar na sua conta</h2>
             <form>
                 <label for="email">E-mail:</label>
@@ -38,24 +38,24 @@
                 <small id="hint-senha" class="hint"></small> 
 
                 <button onclick="logar()" type="button">Entrar</button>
-                <div class="login-links">
+                <nav class="login-links">
                     <a href="#">Esqueceu a senha?</a> | <a href="PI - Cadastro.html">Cadastre-se</a>
-                </div>
+                </nav>
             </form>
-        </div>
-    </div>
+        </section>
+    </main>
     
     <footer>
-        <div style="padding-left: 50px;">
+        <section style="padding-left: 50px;">
             <img src="../IMG/logoalt.png" alt="Logo Alternativo"><br><br>
-            <div class="social-logos">
+            <nav class="social-logos">
                 <a href="https://www.instagram.com/" target="_blank"><img src="../IMG/instagram.png" alt="Logo Instagram"></a>
                 <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><img src="../IMG/facebook.png" alt="Logo Facebook"></a>
                 <a href="https://x.com/?lang=pt" target="_blank"><img src="../IMG/twitter.png" alt="Logo Twitter"></a>
                 <a href="https://br.linkedin.com/" target="_blank"><img src="../IMG/linkedin.png" alt="Logo LinkedIn"></a>
-            </div>
-        </div>
-        <div class="foot-menu">
+            </nav>
+        </section>
+        <nav class="foot-menu">
             <span>
                 <b>Minha Conta</b><br>
                 <br>
