--- a/PI - Web/PI - Página Inicial/PI - Pagina Inicial.html
+++ b/PI - Web/PI - Página Inicial/PI - Pagina Inicial.html
@@ -10,42 +10,42 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="navbar">
-        <div class="navbar-logo">
+    <header class="navbar">
+        <figure class="navbar-logo">
             <img src="../IMG/logo.png" alt="Logo do ConnectPro" class="tamanho-logo">
-        </div>
-        <div class="navbar-menu">
+        </figure>
+        <nav class="navbar-menu">
             <span class="fonte-head"><b>Início</b></span>
             <span><a href="../PI - Serviços/PI - Serviços.html">Serviços</a></span>
             <span><a href="../PI - Sobre/PI - Sobre.html">Sobre</a></span>
             <span><a href="../PI - Ajuda/PI - Ajuda.html">Ajuda</a></span>
-        </div>
-        <div class="navbar-icones">
+        </nav>
+        <nav class="navbar-icones">
             <span><a href="#"><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></a></span>
             <span><a href="../PI - Carrinho/PI - Carrinho.html"><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></a></span>
             <span><a href="../PI - Login/PI - Login.html"><img src="../IMG/login3.png" alt="Login" class="tamanho-icones"></a></span>
-        </div>
-    </div>
+        </nav>
+    </header>
 
     <main class="content">
-        <div class="fundo-vitrine">
+        <section class="fundo-vitrine">
             <img class="bg-vitrine" src="../IMG/inicial/fotocapainicial.jpg" alt="" aria-hidden="true">
-            <div class="tamanho-vitrine">
+            <header class="tamanho-vitrine">
                 <h1>A Maior Vitrine de <br> Serviços da Internet</h1>
-            </div>
+            </header>
 
-            <div class="conteudo-vitrine">
+            <article class="conteudo-vitrine">
                 <p>Explore diferentes categorias. Ache o melhor serviço</p>
-                <div class="botao-vitrine">
+                <nav class="botao-vitrine">
                     <a href="../PI - Serviços/PI - Serviços.html">Explore Agora</a>   <!-- mudei o botão pra ser baseado em css invez de imagem -->
-                </div>
-            </div>
-        </div>
+                </nav>
+            </article>
+        </section>
 
-        <div class="meio">
-            <div class="pagamento">
+        <section class="meio">
+            <section class="pagamento">
                 <h1>Benefícios de usar a plataforma</h1>
-                <div>
+                <section>
                     <span>
                         <img src="../IMG/pagamento.png" alt="Pagamento"><br>
                         <h2>Método de Pagamento</h2>
@@ -56,23 +56,23 @@
                         <h2>Suporte ao Cliente</h2>
                         <p>Suporte disponível 24/7</p>
                     </span>
-                </div>
-            </div>
-        </div>
+                </section>
+            </section>
+        </section>
 
     </main>
 
     <footer>
-        <div style="padding-left: 50px;">
+        <section style="padding-left: 50px;">
             <img src="../IMG/logoalt.png" alt="Logo Alternativo"><br><br>
-            <div class="social-logos">
+            <nav class="social-logos">
                 <a href="https://www.instagram.com/" target="_blank"><img src="../IMG/instagram.png" alt="Logo Instagram"></a>
                 <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><img src="../IMG/facebook.png" alt="Logo Facebook"></a>
                 <a href="https://x.com/?lang=pt" target="_blank"><img src="../IMG/twitter.png" alt="Logo Twitter"></a>
                 <a href="https://br.linkedin.com/" target="_blank"><img src="../IMG/linkedin.png" alt="Logo LinkedIn"></a>
-            </div>
-        </div>
-        <div class="foot-menu">
+            </nav>
+        </section>
+        <nav class="foot-menu">
             <span>
                 <b>Minha Conta</b><br>
                 <br>
