--- a/PI - Web/PI - Serviços/PI - Serviços.html
+++ b/PI - Web/PI - Serviços/PI - Serviços.html
@@ -10,35 +10,32 @@
 </head>
 
 <body class="menu-serviços">
-</body>
-
-</html>
-<div class="navbar">
-    <div class="navbar-logo">
+    <header class="navbar">
+    <figure class="navbar-logo">
         <img src="../IMG/logo.png" alt="Logo do ConnectPro" class="tamanho-logo">
-    </div>
-    <div class="navbar-menu">
+    </figure>
+    <nav class="navbar-menu">
         <span><a href="../PI - Página Inicial/PI - Pagina Inicial.html">Início</a></span>
         <span class="fonte-head"><b>Serviços</b></span>
         <span><a href="../PI - Sobre/PI - Sobre.html">Sobre</a></span>
         <span><a href="../PI - Ajuda/PI - Ajuda.html">Ajuda</a></span>
         <span><a href="../PI - Serviços/PI - Meus Serviços Contratados.html">Serviços Contratados</a></span>
-    </div>
-    <div class="navbar-icones">
+    </nav>
+    <nav class="navbar-icones">
         <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span>
         <span><a href="../PI - Carrinho/PI - Carrinho.html"><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></a></span>
         <span><a href="../PI - Login/PI - Login.html"><img src="../IMG/login3.png" alt="Login"
                     class="tamanho-icones"></a></span>
-    </div>
-</div>
+    </nav>
+</header>
 
 <main>
     <h2 class="meio-titulo-serviços">Todos os Serviços</h2>
-    <div class="container">
-        <div class="menu-lateral">
+    <section class="container">
+        <aside class="menu-lateral">
             <button type="button" class="link-mais-visitados" onclick="mostrarCategoria('mais-visitados')">Mais Visitados</button>
             <input type="text" id="busca-categorias" placeholder="Buscar categoria..." class="busca-de-serviços">
-            <div id="sugestoes-categoria" style="position:relative; z-index:10;"></div>
+            <section id="sugestoes-categoria" style="position:relative; z-index:10;"></section>
             <ul id="lista-categorias">
                 <li onclick="mostrarCategoria('programacao')">Programação</li>
                 <li onclick="mostrarCategoria('jardinagem')">Jardinagem</li>
@@ -46,165 +43,165 @@
                 <li onclick="mostrarCategoria('design grafico')">Design Gráfico</li>
                 <li onclick="mostrarCategoria('traducao')">Tradução</li>
             </ul>
-        </div>
+        </aside>
 
-        <div class="conteudo">
-            <div id="mais-visitados" class="categoria active">
-                <div class="retangulo">
+        <section class="conteudo">
+            <section id="mais-visitados" class="categoria active">
+                <header class="retangulo">
                     <h2>Mais Visitados</h2>
-                </div>
-                <div class="grid">
-                    <div class="card">
+                </header>
+                <section class="grid">
+                    <article class="card">
                         <a href="PI - Pagina molde.html?id=programacao-2">
                             <img src="../IMG/programa-2.jpg" alt="Desenvolvimento Web - Avançado" width="400" height="300">
                             <h3 class="card-title">Desenvolvimento Web - Avançado</h3>
                         </a>
-                        <div class="card-sub">A partir de R$ 450</div>
-                    </div>
-                    <div class="card">
+                        <footer class="card-sub">A partir de R$ 450</footer>
+                    </article>
+                    <article class="card">
                         <a href="PI - Pagina molde.html?id=jardinagem-1">
                             <img src="../IMG/jardinagem 1.webp" alt="Jardinagem e paisagismo" width="400" height="300">
                             <h3 class="card-title">Jardinagem e paisagismo</h3>
                         </a>
-                        <div class="card-sub">A partir de R$ 200</div>
-                    </div>
-                    <div class="card">
+                        <footer class="card-sub">A partir de R$ 200</footer>
+                    </article>
+                    <article class="card">
                         <a href="PI - Pagina molde.html?id=marcenaria-1">
                             <img src="../IMG/marcenaria 1.png" alt="Ajuste de móveis" width="400" height="300">
                             <h3 class="card-title">Ajuste de móveis</h3>
                         </a>
-                        <div class="card-sub">A partir de R$ 200</div>
-                    </div>
-                    <div class="card">
+                        <footer class="card-sub">A partir de R$ 200</footer>
+                    </article>
+                    <article class="card">
                         <a href="PI - Pagina molde.html?id=design-grafico-1">
                             <img src="../IMG/Design Grafico 1.jpg" alt="Design Gráfico - Criação de logo" width="400" height="300">
                             <h3 class="card-title">Design Gráfico - Criação de logo</h3>
                         </a>
-                        <div class="card-sub">A partir de R$ 120</div>
-                    </div>
-                    <div class="card">
+                        <footer class="card-sub">A partir de R$ 120</footer>
+                    </article>
+                    <article class="card">
                         <a href="PI - Pagina molde.html?id=programacao-1">
                             <img src="../IMG/programa-1.png" alt="Desenvolvimento Web - Básico" width="400" height="300">
                             <h3 class="card-title">Desenvolvimento Web - Básico</h3>
                         </a>
-                        <div class="card-sub">A partir de R$ 150</div>
-                    </div>
-                    <div class="card">
+                        <footer class="card-sub">A partir de R$ 150</footer>
+                    </article>
+                    <article class="card">
                         <a href="PI - Pagina molde.html?id=programacao-3">
                             <img src="../IMG/../IMG/banco de dados 1.jpg" alt="Criação de Banco de Dados" width="400" height="300">
                             <h3 class="card-title">Criação de Banco de Dados</h3>
                         </a>
-                        <div class="card-sub">A partir de R$ 550</div>
-                    </div>
-                </div>
-            </div>
+                        <footer class="card-sub">A partir de R$ 550</footer>
+                    </article>
+                </section>
+            </section>
 
-            <div id="programacao" class="categoria">
-                <div class="retangulo">
+            <section id="programacao" class="categoria">
+                <header class="retangulo">
                     <h2>Programação</h2>
-                </div>
-                <div class="grid">
-                    <div class="card">
+                </header>
+                <section class="grid">
+                    <article class="card">
                         <a href="PI - Pagina molde.html?id=programacao-1">
                             <img src="../IMG/programa-1.png" alt="Desenvolvimento Web - Básico" width="400"
                                 height="300">
                             <h3 class="card-title">Desenvolvimento Web - Básico</h3>
                         </a>
-                        <div class="card-sub">A partir de R$ 150</div>
-                    </div>
+                        <footer class="card-sub">A partir de R$ 150</footer>
+                    </article>
 
-                    <div class="card">
+                    <article class="card">
                         <a href="PI - Pagina molde.html?id=programacao-2">
                             <img src="../IMG/programa-2.jpg" alt="Desenvolvimento Web - Avançado" width="400"
                                 height="300">
                             <h3 class="card-title">Desenvolvimento Web - Avançado</h3>
                         </a>
-                        <div class="card-sub">A partir de R$ 450</div>
-                    </div>
+                        <footer class="card-sub">A partir de R$ 450</footer>
+                    </article>
 
-                    <div class="card">
+                    <article class="card">
                         <a href="PI - Pagina molde.html?id=programacao-3">
                             <img src="../IMG/../IMG/banco de dados 1.jpg" alt="Criação de Banco de Dados" width="400"
                                 height="300">
                             <h3 class="card-title">Criação de Banco de Dados</h3>
                         </a>
-                        <div class="card-sub">A partir de R$ 550</div>
-                    </div>
-                </div>
-            </div>
+                        <footer class="card-sub">A partir de R$ 550</footer>
+                    </article>
+                </section>
+            </section>
 
-            <div id="jardinagem" class="categoria">
-                <div class="retangulo">
+            <section id="jardinagem" class="categoria">
+                <header class="retangulo">
                     <h2>Jardinagem</h2>
-                </div>
-                <div class="grid">
-                    <div class="card">
+                </header>
+                <section class="grid">
+                    <article class="card">
                         <a href="PI - Pagina molde.html?id=jardinagem-1">
                             <img src="../IMG/jardinagem 1.webp" alt="Jardinagem e paisagismo" width="400" height="300">
                             <h3 class="card-title">Jardinagem e paisagismo</h3>
                         </a>
-                        <div class="card-sub">A partir de R$ 200</div>
-                    </div>
-                </div>
-            </div>
+                        <footer class="card-sub">A partir de R$ 200</footer>
+                    </article>
+                </section>
+            </section>
 
-            <div id="marcenaria" class="categoria">
-                <div class="retangulo">
+            <section id="marcenaria" class="categoria">
+                <header class="retangulo">
                     <h2>Marcenaria</h2>
-                </div>
-                <div class="grid">
-                    <div class="card">
+                </header>
+                <section class="grid">
+                    <article class="card">
                         <a href="PI - Pagina molde.html?id=marcenaria-1">
                             <img src="../IMG/marcenaria 1.png" alt="Ajuste de móveis" width="400" height="300">
                             <h3 class="card-title">Ajuste de móveis</h3>
                         </a>
-                        <div class="card-sub">A partir de R$ 200</div>
-                    </div>
-                </div>
-            </div>
-            <div id="design grafico" class="categoria">
-                <div class="retangulo">
+                        <footer class="card-sub">A partir de R$ 200</footer>
+                    </article>
+                </section>
+            </section>
+            <section id="design grafico" class="categoria">
+                <header class="retangulo">
                     <h2>Design Gráfico</h2>
-                </div>
-                <div class="grid">
-                    <div class="card">
+                </header>
+                <section class="grid">
+                    <article class="card">
                         <a href="PI - Pagina molde.html?id=design-grafico-1">
                             <img src="../IMG/Design Grafico 1.jpg" alt="Design Gráfico - Criação de logo" width="400"
                                 height="300">
                             <h3 class="card-title">Design Gráfico - Criação de logo</h3>
                         </a>
-                        <div class="card-sub">A partir de R$ 120</div>
-                    </div>
-                </div>
-            </div>
+                        <footer class="card-sub">A partir de R$ 120</footer>
+                    </article>
+                </section>
+            </section>
 
-            <div id="traducao" class="categoria">
-                <div class="retangulo">
+            <section id="traducao" class="categoria">
+                <header class="retangulo">
                     <h2>Tradução</h2>
-                </div>
-                <div class="grid">
-                </div>
-            </div>
+                </header>
+                <section class="grid">
+                </section>
+            </section>
 
-        </div>
-    </div>
+        </section>
+    </section>
 </main>
 
 <br>
 
 <footer>
-    <div style="padding-left: 20px; padding-right: 20px;">
+    <section style="padding-left: 20px; padding-right: 20px;">
         <img src="../IMG/logoalt.png" alt="Logo Alternativo"><br><br>
-        <div class="social-logos">
+        <nav class="social-logos">
             <a href="https://www.instagram.com/" target="_blank"><img src="../IMG/instagram.png"
                     alt="Logo Instagram"></a>
             <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><img src="../IMG/facebook.png"
                     alt="Logo Facebook"></a>
             <a href="https://x.com/?lang=pt" target="_blank"><img src="../IMG/twitter.png" alt="Logo Twitter"></a>
             <a href="https://br.linkedin.com/" target="_blank"><img src="../IMG/linkedin.png" alt="Logo LinkedIn"></a>
-        </div>
-    </div>
-    <div class="foot-menu">
+        </nav>
+    </section>
+    <nav class="foot-menu">
         <span>
             <b>Minha Conta</b><br>
             <br>
