--- a/PI - Web/PI - Sobre/PI - Sobre.html
+++ b/PI - Web/PI - Sobre/PI - Sobre.html
@@ -8,47 +8,47 @@
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
 </head>
 <body style="background-color: #eeeeee;">
-    <div class="navbar">
-        <div class="navbar-logo">
+    <header class="navbar">
+        <figure class="navbar-logo">
             <img src="../IMG/logo.png" alt="Logo do ConnectPro" class="tamanho-logo">
-        </div>
-        <div class="navbar-menu">
+        </figure>
+        <nav class="navbar-menu">
             <span><a href="../PI - Página Inicial/PI - Pagina Inicial.html">Início</a></span>
             <span><a href="../PI - Serviços/PI - Serviços.html">Serviços</a></span>
             <span class="fonte-head"><b>Sobre</b></span>
             <span><a href="../PI - Ajuda/PI - Ajuda.html">Ajuda</a></span>
-        </div>
-        <div class="navbar-icones">
+        </nav>
+        <nav class="navbar-icones">
             <span><img src="../IMG/procurar.png" alt="Procurar" class="tamanho-icones"></span>
             <span><a href="../PI - Carrinho/PI - Carrinho.html"><img src="../IMG/carrinho.png" alt="Carrinho" class="tamanho-icones"></a></span>
             <span><a href="../PI - Login/PI - Login.html"><img src="../IMG/login3.png" alt="Login" class="tamanho-icones"></a></span>
-        </div>
-    </div>
+        </nav>
+    </header>
 
     <main class="sobre-container">
         <section class="sobre-hero">
-            <div class="sobre-text">
+            <article class="sobre-text">
                 <h1>Sobre o ConnectPro</h1>
                 <p>O ConnectPro conecta clientes a profissionais qualificados em diversas áreas — programação, design, edição de vídeo e muito mais. Nossa missão é facilitar contratação com segurança, avaliações reais e comunicação direta entre contratante e prestador.</p>
                 <br>
                 <h1>Nossa Visão</h1>
                 <p>Buscamos transformar a forma como pessoas e empresas se conectam com talentos, criando um ambiente digital mais justo, colaborativo e eficiente para todos.</p>
-            </div>
+            </article>
             <img src="../IMG/Connect Pro inteiro png.png" alt="Logo" class="sobre-logo">
         </section>
     </main>
 
     <footer>
-        <div style="padding-left: 50px;">
+        <section style="padding-left: 50px;">
             <img src="../IMG/logoalt.png" alt="Logo Alternativo"><br><br>
-            <div class="social-logos">
+            <nav class="social-logos">
                 <a href="https://www.instagram.com/" target="_blank"><img src="../IMG/instagram.png" alt="Logo Instagram"></a>
                 <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><img src="../IMG/facebook.png" alt="Logo Facebook"></a>
                 <a href="https://x.com/?lang=pt" target="_blank"><img src="../IMG/twitter.png" alt="Logo Twitter"></a>
                 <a href="https://br.linkedin.com/" target="_blank"><img src="../IMG/linkedin.png" alt="Logo LinkedIn"></a>
-            </div>
-        </div>
-        <div class="foot-menu">
+            </nav>
+        </section>
+        <nav class="foot-menu">
             <span>
                 <b>Minha Conta</b><br>
                 <br>
@@ -80,7 +80,7 @@
                 <a href="#">Termos e Condições</a> <!-- adicionar link --><br>
                 <a href="#">Privacidade e Política</a> <!-- adicionar link --><br>
             </span>
-        </div>
+        </nav>
     </footer>
 </body>
 </html>
